0.7.2
Added 'Select All' to edit/context menu.
Fixed d&d within document.
Added local themes ( ~/.KKEditQT/themes ).
Fixed changing theme in prefs.
Set visual insertion point for drag and drop on doc.
Code clean.
Fixed setting doc dirty on drop file.
Fixed reseting functions menu on file save.
Dropping file on doc now inserts at drop point.
Set max length of info line in KKEditQTProgressBar.
Added simple help to Symbols menu plugin ( Edit->Plugin Prefs->Symbols menu About->Help ).
Fixed multi char graphemes.
Added Symbols menu plugin.
Repaced coloured tabs with icon to show doc status.
Added total number of open files to env sent to tool command.
Fixed place holders in tool command.
Set tool bar items enabled properly after 'Revert'.
Fixed removing all bookmarks.
Fixed removing bookmark mistakenly marking document dirty.
Fixed moving selection up/down via shortcut.
Fixed moving line up/down via shortcut.
Fixed progress dialog not showing full.
Made progress dialog show % of files when restoring session.
Redone syntax highlighting plugins.
Redone theme files.
Added theme class.

0.7.1
Set tab background colour to document state.
Added QT_tabColoursClass.cpp/.h
Fixed warning on file changed on disk, tab goes yellow and doc marked dirty if 'ignore' selected, tab goes pinkish if no warnings selected and file changes.
Fixed find/find next menus.
Fixed changed find options being saved with prefs.
Added find after replace option to find dialog.
Find backwards in all files working properly.
Find/Replace handles multi line find replace properly.
Redone find/replace, now replaces '\n' and '\t' in the search dialog correctly.
Revert file no longer deletes undo history.
Done warn on file change pref.
Done refresh document when file changes on disk.
Add sytnatx highlighting for binary numbers in 'c/c++'.
Added functions for multiple different multiline highlighting.
More syntax highlighting fixes.
Fixed '//' inside quotes wrongly being highlighted as comment ( c,c++ etc ).