@@ -755,6 +755,8 @@ void KKEditClass::buildMainGui(void)
 	this->copyMenuItem=this->makeMenuItemClass(EDITMENU,"Copy",QKeySequence::Copy,"edit-copy",COPYMENUNAME,COPYMENUITEM);
 //paste
 	this->pasteMenuItem=this->makeMenuItemClass(EDITMENU,"Paste",QKeySequence::Paste,"edit-paste",PASTEMENUNAME,PASTEMENUITEM);
+//delete
+	this->deleteMenuItem=this->makeMenuItemClass(EDITMENU,"Delete",QKeySequence::Delete,"edit-delete",DELETEMENUNAME,DELETEMENUITEM);
 //selectall
 	this->editMenu->addSeparator();
 	this->selectAllMenuItem=this->makeMenuItemClass(EDITMENU,"Select All",QKeySequence::SelectAll,"edit-select-all",SELECTALLMENUNAME,SELECTALLMENUITEM);
